[tool.poetry]
name = "kolgidrat"
version = "0.1.0"
description = ""
authors = ["Andrii <riabininmv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
state = "^0.1.1.dev0"
filters = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
